[kstyle]: Give active document tabs a thick highlight

BUG: 356037